[package]
name = "darkbin"
version = "0.1.0"
authors = ["CrazedProgrammer <crazedprogrammer@gmail.com>"]

[dependencies]
time = "0.1.39"
serde_json = "1.0.*"
process_path = "0.1.*"
fnv = "1.0.*"
tiled = "0.7.*"
vek = "0.9.*"

[dependencies.sdl2]
version = "0.31.*"
default-features = false
features = ["image"]
